--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="kides Abc/">kides Abc</a></li>
         <li><a href="Sunzine Photo Gallery/">Sunzine Photo Gallery</a></li>
         <li><a href="Color table/">flat ui colors</a></li>
+        <li><a href="saltnpepper/">saltnpepper</a></li>
     </ol>
 </body>
 </html>
