--- a/gmail project/index.html
+++ b/gmail project/index.html
@@ -123,6 +123,31 @@
                     <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
                     <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
                 </div>
+                <div class="line">
+                    <img src="imgs/check_box_outline_blank_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
+                </div>
+                <div class="line">
+                    <img src="imgs/check_box_outline_blank_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
+                </div>
+                <div class="line">
+                    <img src="imgs/check_box_outline_blank_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
+                </div>
+                <div class="line">
+                    <img src="imgs/check_box_outline_blank_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
+                </div>
+                <div class="line">
+                    <img src="imgs/check_box_outline_blank_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <img src="imgs/star_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                    <span>GitHub [GitHub]Please verify your device-Hey maazsabir99!A sign in attempt requires further... <b>Feb 9</b></span>
+                </div>
             </div>
             <div class="center-footer">
                 <img src="imgs/centerfooter.png" alt="">
