--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 <p>Gmail</p>
                 <a href="gmail project/index.html" target="_blank">View Project</a>
             </div>
+            <div class="project">
+                <h2>Project 8</h2>
+                <p>Saylani Clone</p>
+                <a href="saylani-welfare-clone/index.html" target="_blank">View Project</a>
+            </div>
             
         </div>
     </div>
