--- a/saylani-welfare-clone/index.html
+++ b/saylani-welfare-clone/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <div class="uper-container">
         <div class="uper-icon d-flex d-md-none justify-content-center p-2">
             <i class="fa-solid fa-arrow-circle-down" aria-hidden="true"></i>
@@ -56,32 +57,32 @@
         </div>
     </div>
     <div class="header-container">
-        <header class="container">
-            <div class="header-left">
-                <img src="https://saylaniwelfare.com/static/media/logo_saylaniwelfare.22bf709605809177256c.png"
-                    alt="logo">
+    <header>
+
+        <!-- NAVBAR -->
+        <div class="header-left">
+            <img src="imgs/nav-logo.png" alt="logo">
+        </div>
+        <div class="header-right">
+            <ul>
+                <li>About</li>
+                <li>Services</li>
+                <li>Media</li>
+                <li>Contact Us</li>
+                <li>Bank Details</li>
+                <li>Other Websites</li>
+            </ul>
+            <div class="header-btn">
+                <button>Donate Now</button>
+                <button>Be a Sponsor</button>
             </div>
-            <div class="header-right">
-                <ul>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Media</li>
-                    <li>Contact US</li>
-                    <li>Bank details</li>
-                    <li>Other websites</li>
-                </ul>
-                <div class="header-btn d-none d-md-flex">
-                    <button>DONATE NOW
-                    </button>
-                    <BUtton>BE A SPONSOR
-                    </BUtton>
-                </div>
-                <div class="bars-icon d-flex d-md-none">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
+            <div class="bars-icon">
+                <i class="fa-solid fa-bars"></i>
             </div>
-        </header>
-    </div>
+        </div>
+    </header>
+</div>
+
     <main class=" container">
         <section class="hero d-sm-flex mb-3">
             <div class="hero-left">
@@ -149,31 +150,31 @@
               </div>
             </div>
           </div>
-        <section class="doing-sec">
-            <h1>What We Are Doing</h1>
-            <div class="doing-con">
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image1.webp" height="70px">
+        <section class="doing-sec text-center py-4">
+            <h1 class="mb-4">What We Are Doing</h1>
+            <div class="doing-con d-grid gap-3 grid-template-columns">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image1.webp" height="70px" loading="lazy">
                     <p>Welfare</p>
                 </div>
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image2.webp" height="70px">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image2.webp" height="70px" loading="lazy">
                     <p>Medical</p>
                 </div>
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image3.webp" height="70px">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image3.webp" height="70px" loading="lazy">
                     <p>Online Sadkah</p>
                 </div>
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image4.webp" height="70px">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image4.webp" height="70px" loading="lazy">
                     <p>Clean Water</p>
                 </div>
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image5.webp" height="70px">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image5.webp" height="70px" loading="lazy">
                     <p>Education</p>
                 </div>
-                <div class="do-boxes d-flex flex-column align-items-center justify-content-center">
-                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image6.webp" height="70px">
+                <div class="do-boxes text-center">
+                    <img src="https://saylaniwelfare.com/images/cloudinaryImages/services-image6.webp" height="70px" loading="lazy">
                     <p>Food</p>
                 </div>
             </div>
