--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
                 <p>Saylani Clone</p>
                 <a href="saylani-welfare-clone/index.html" target="_blank">View Project</a>
             </div>
+            <div class="project">
+                <h2>Project 9</h2>
+                <p>calculator</p>
+                <a href="calculator/index.html" target="_blank">View Project</a>
+            </div>
+            <div class="project">
+                <h2>Project 10</h2>
+                <p>digital clock</p>
+                <a href="digital clock/index.html" target="_blank">View Project</a>
+            </div>
+            <div class="project">
+                <h2>Project 11</h2>
+                <p>fetch data</p>
+                <a href="fetch date/index.html" target="_blank">View Project</a>
+            </div>
             
         </div>
     </div>
